added module for gallery upload and delete for a project updated doc added badges
closes #16
