# functions/src/schemas/GallerySchema.ts
@@ -1,0 +1,13 @@
+import { string, object } from "yup";
+import cloudStorageUploadSchema from "./CloudStorageUploadSchema";
+
+const gallerySchema = () =>
+  object().shape({
+    id: string().required(),
+    name: string().nullable(true),
+    description: string().nullable(true),
+    link: string().required(),
+    meta: cloudStorageUploadSchema().required(),
+  });
+
+export default gallerySchema;
